added git info to index html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -74,6 +74,20 @@
                 <tr><td>os.version</td><td>${os.version}</td></tr>
                 <tr><td>os.arch</td><td>${os.arch}</td></tr>
             </tbody>
+
+            <thead>
+                <tr><td colspan="2" align="center">Git Properties</td></tr>
+            </thead>
+            <tbody>
+                <tr><td>git.branch</td><td>${git.branch}</td></tr>
+                <tr><td>git.commit.time</td><td>${git.commit.time}</td></tr>
+                <tr><td>git.commit.id</td><td>${git.commit.id}</td></tr>
+                <tr><td>git.commit.id.describe</td><td>${git.commit.id.describe}</td></tr>
+                <tr><td>git.commit.message.full</td><td>${git.commit.message.full}</td></tr>
+                <tr><td>git.commit.user.name</td><td>${git.commit.user.name}</td></tr>
+                <tr><td>git.commit.user.email</td><td>${git.commit.user.email}</td></tr>
+                <tr><td>git.tags</td><td>${git.tags}</td></tr>
+            </tbody>
         </table>
     </body>
 </html>
